<resources>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_yes">Yes</string>
    <string name="common_retry">Retry</string>
    <string name="common_close">Close</string>

    <string name="app_name">World Exploration Action</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_friends">Friends</string>
    <string name="leaderboard_content_description">Leaderboard Content</string>
    <string name="leaderboard_global_button_title">Global</string>
    <string name="leaderboard_friends_button_title">Friends</string>
    <string name="leaderboard_fetch_error">Could not retrieve the leaderboard: %1$s</string>
    <string name="location_request_rationale_title">Need Location Permissions</string>
    <string name="location_request_rationale_message">We need your precise location to show trophies around you and check whether you can collect a trophy</string>
    <string name="location_permissions_denied">Location permissions denied</string>
    <string name="location_retrieval_error">Could not retrieve current location</string>
...

    <string name="friends_search_placeholder">Search new friends…</string>
    <string name="friends_action_send_request">Send Request</string>
    <string name="friends_action_review_request">Review Request</string>
    <string name="friends_no_friend">Seems you have no friends</string>
    <string name="friends_search_no_found">No user found</string>
    <string name="friends_request_accept">Accept</string>
    <string name="friends_request_decline">Decline</string>
    <string name="friends_review_request">Accept %1$s\'s friend request?</string>
    <string name="friends_send_request">Send a friend request to %1$s?</string>
    <string name="friends_already_friend">%1$s is already your friend! (or you\'ve received a friend request from %1$s)</string>
    <string name="friends_view_profile">View Profile</string>
    <string name="friends_delete">Delete</string>

...
