...
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Trophy Title"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trophy_details_maps_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="HardcodedText" />

    <TextView
...
        android:text="Pictures by others"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <Button
        android:id="@+id/trophy_action_button"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#6441A5"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Collect Trophy"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/sort_photos"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="8dp"
        android:background="#0000"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="@id/sort_photos"
        app:layout_constraintTop_toTopOf="@id/sort_photos"
        app:srcCompat="@drawable/ellipse"
        tools:ignore="ContentDescription" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/images_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
