<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard_black_24dp"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends_black_24dp"
        android:title="@string/title_friends" />

</menu>
