...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friends.FriendsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/friends_search_bar_background"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:backgroundTint="#EFEFEF"
        app:cardCornerRadius="30dp"
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_friends_search_black_21dp"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/friends_search_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:defaultFocusHighlightEnabled="false"
...
        app:layout_constraintStart_toEndOf="@id/friends_search_bar_background"
        app:layout_constraintTop_toTopOf="@id/friends_search_bar_background"
        app:srcCompat="@mipmap/ic_friends"
        tools:ignore="ContentDescription" />

    <com.worldexplorationaction.android.ui.userlist.UserListView
        android:id="@+id/friends_user_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
...
